# reach-nrfc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Kconfig  README.md  Reach nRF52840 Dongle.json  nRF52840 Dongle Demo.xlsx  pm_static.yml  prj.conf  update_definitions.bat
Integrations/nRFConnect/: reach_nrf_connect.c  reach_nrf_connect.h
child_image/: mcuboot.conf
include/: app_version.h  commands.h  const_files.h  definitions.h  device.h  files.h  fs_utils.h  main.h  parameters.h  reach-server.h
src/: cli.c  commands.c  const_files.c  definitions.c  device.c  files.c  fs_utils.c  main.c  param_repo.c  parameters.c  time.c
